<resources>
    <string name="app_name">东油教务</string>
    <string name="server">http://dyjw.fly-kite.com/</string>
    <string name="back_press">再按一次退出</string>
    <string name="versionName">V1.3.3</string>
    <string name="about_content">抱歉哈&lt;br/&gt;现在实在是没想好这里该写些啥&lt;br/&gt;就让它空着好了&lt;br/&gt;&lt;br/&gt;&lt;br/&gt;&lt;a href=&quot;http://weibo.com/hiy0u&quot;&gt;调皮的微博&lt;br/&gt;戳我戳我^_^&lt;/a&gt;</string>

    <string name="menu_about">关于</string>
    <string name="check_update">检测更新</string>
    <string name="open_debug">打开错误报告模式</string>
    <string name="post_debug">提交错误报告</string>
    <string name="report_suggest">反馈建议</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="yes">是</string>
    <string name="no">否</string>

    <!-- 错误报告模式 -->
    <string name="open_debug_notice">此模式将会收集您在使用本APP过程中产生的错误信息以及部分从教务管理系统中获取到的信息，会包含部分个人隐私（如您的成绩或者课表等信息），如果介意请勿打开此模式！\n打开该模式后请使用您遇到错误的功能，随后请在菜单中选择“提交错误信息”将信息提交到服务器。\n是否打开错误报告模式？</string>
    <string name="post_debug_notice">是否将目前所收集到的信息提交到服务器？</string>
    <string name="postting_debug">正在后台提交错误报告&#8230;</string>
    <string name="nothing_posted">您的错误报告为空，已关闭错误报告模式。</string>
    <string name="post_debug_success">提交完毕</string>
    <string name="post_debug_failed">提交失败，请重新提交！</string>
    <string name="post_password">是否将您的密码提交到服务器？\nTips:提交密码可以方便开发者进行调试，您的密码不会被用于其它用途。</string>

    <!-- 反馈建议 -->
    <string name="suggestion">请在此处填写您的建议及意见（必填）</string>
    <string name="submit_password">提交密码</string>
    <string name="contact">联系方式（选填）</string>
    <string name="submit_password_tips">Tips:如果您反馈的内容是一个BUG，提交密码可以方便开发者进行调试。</string>
    <string name="length_too_short">建议及意见至少10个字</string>

    <!-- 版本更新 -->
    <string name="update">更新</string>
    <string name="update_new">检测到新版本</string>
    <string name="is_newest_version">已经是最新版</string>
    <string name="check_update_failed">加载失败，请检查网络</string>
    <string name="update_contents">\n——————————\n更新内容：\n</string>
    <string name="update_or_not">\n——————————\n是否更新？</string>
    <string name="no_alert">不再提醒</string>
    <string name="downloading">正在下载&#8230;</string>
    <string name="update_failed">下载失败，请检查网络是否正常</string>

    <!-- 左侧抽屉 -->
    <string name="title_section1">我的课表</string>
    <string name="title_section2">黎明湖畔</string>
    <string name="title_section3">教务系统</string>
    <string name="title_section4">东油新闻</string>
    <string name="title_section5">教务通知</string>
    <array name="nav_list">
        <item>我的课表</item>
        <item>黎明湖畔</item>
        <item>教务系统</item>
        <item>东油新闻</item>
        <item>教务通知</item>
    </array>
    <string name="user_welcome">请登录教务管理系统</string>
    <string name="logout_confirm">确认注销当前帐号？</string>
    <string name="logout">注销</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="click_to_load_image">点击加载图片</string>
    <string name="loading">正在加载&#8230;</string>
    <string name="load_failed">检测更新失败，请检查网络</string>

    <!-- 首页，我的课表 -->
    <string name="no_course">暂无课表，请登录教务系统获取课表</string>
    <string name="course_info">课程详情</string>
    <array name="weekdays">
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
        <item>周日</item>
    </array>

    <!-- 教务系统 -->
    <string name="username">用户名</string>
    <string name="password">密　码</string>
    <string name="verify_code">验证码</string>
    <string name="login">登录</string>
    <string name="welcome">，欢迎登录东油教务</string>
    <string name="cjcx">成绩查询</string>
    <string name="grkb">个人课表</string>
    <string name="jxjh">教学计划</string>
    <string name="jxpj">教学评价</string>
    <string name="cxbm">重修报名</string>
    <string name="loging">正在登录&#8230;</string>
    <string name="need_verify_code">请输入验证码</string>
    <string name="cj_getting_xueqi">正在获取学期列表&#8230;</string>
    <string name="cj_getting_chengji">正在查询您的成绩&#8230;</string>
    <string name="kb_getting_kebiao">正在查询您的课表&#8230;</string>
    <string name="posting">正在提交请稍候&#8230;</string>
    <string name="get_failed">查询失败，请稍候再试</string>
    <string name="post_failed">提交失败，请稍候再试</string>
    <string name="cj_no_chengji">您这学期没有相应的成绩</string>
    <string name="cj_kaikexueqi">开课学期</string>
    <string name="new_xueqi">新学期课表</string>
    <string name="need_xueqi">请选择学期</string>
    <string name="kb_no_kebiao">您这学期没有相应的课表信息</string>
    <string name="click_to_view">点击查看详情</string>
    <!-- 教学评价 -->
    <string name="submit">提交</string>
    <string name="pj_xnxq">开课学期</string>
    <string name="pj_pjpc">评价批次</string>
    <string name="pj_pjfl">评价分类</string>
    <string name="pj_pjkc">评价课程</string>
    <string name="select_same">请不要选择同一选项</string>
    <string name="select_all">请选择完整信息</string>
    <string name="pj_save">确定要保存该教师课程的教学效果评价问卷吗？</string>

    <!-- 东油新闻 -->
    <string name="news">东油新闻</string>
    <array name="news_url">
        <item>520203.html</item>
        <item>520202.html</item>
        <item>520205.html</item>
        <item>520204.html</item>
        <item>520208.html</item>
        <item>520209.html</item>
        <item>520215.html</item>
        <item>520210.html</item>
        <item>520206.html</item>
        <item>520211.html</item>
        <item>520218.html</item>
        <item>520219.html</item>
        <item>520222.html</item>
    </array>
    <array name="news_tab">
        <item>通知公告</item>
        <item>东油要闻</item>
        <item>教学科研</item>
        <item>党建思政</item>
        <item>箐箐校园</item>
        <item>院部动态</item>
        <item>交流合作</item>
        <item>媒体聚焦</item>
        <item>典型宣传</item>
        <item>专题热点</item>
        <item>高教视点</item>
        <item>理论学习</item>
        <item>创意东油</item>
    </array>
    <string name="release_to_load_more">松开加载更多</string>
    <string name="pull_up_to_load_more">上拉加载更多</string>
    <string name="last_page">已到达最后一页</string>

    <!-- 教务通知 -->
    <string name="notice">教务通知</string>
    <array name="notice_url">
        <item>350312.html</item>
        <item>350309.html</item>
        <item>350302.html</item>
        <item>350304.html</item>
        <item>350303.html</item>
        <item>350316.html</item>
        <item>350305.html</item>
        <item>350307.html</item>
        <item>350317.html</item>
    </array>
    <array name="notice_tab">
        <item>通知公告</item>
        <item>新闻动态</item>
        <item>机构设置</item>
        <item>办事指南</item>
        <item>规章制度</item>
        <item>教学建设</item>
        <item>资料下载</item>
        <item>信息发布</item>
        <item>高教视窗</item>
    </array>

    <!-- 下载管理 -->
    <string name="download_manager">下载管理</string>
    <string name="download_file">文件下载</string>
    <string name="filename">文件名</string>
    <string name="download_tips">小贴士：下载的文件可以在APP内右上角的下载管理图标处找到。文件保存路径为sdcard/DYJW/download/</string>
    <string name="download">下载</string>
    <string name="open_outer">外部打开</string>
    <string name="file_exists">已存在同名文件</string>
    <string name="download_started">已开始下载</string>
    <string name="file_destroyed_redownload">文件可能损坏，已重新开始下载</string>
    <string name="file_destroyed_delete">文件信息丢失，无法继续下载，已删除任务</string>
    <string name="download_finish">下载完毕</string>
    <string name="delete_confirm">确认删除文件？\n</string>
    <string name="delete_finished">文件已删除</string>

    <!-- 文件类型 -->
    <array name="filetype">
        <item>.doc</item>
        <item>.docx</item>
        <item>.xls</item>
        <item>.xlsx</item>
        <item>.ppt</item>
        <item>.pptx</item>
        <item>.pdf</item>
        <item>.rar</item>
        <item>.zip</item>
        <item>.7z</item>
        <item>.apk</item>
        <item>.avi</item>
        <item>.mp3</item>
        <item>.mp4</item>
        <item>.flv</item>
    </array>

    <!-- MINE类型 -->
    <array name="mimetype">
        <item>application/msword</item>
        <item>application/vnd.openxmlformats-officedocument.wordprocessingml.document</item>
        <item>application/vnd.ms-excel</item>
        <item>application/vnd.openxmlformats-officedocument.spreadsheetml.sheet</item>
        <item>application/vnd.ms-powerpoint</item>
        <item>application/vnd.openxmlformats-officedocument.presentationml.presentation</item>
        <item>application/pdf</item>
        <item>application/octet-stream</item>
        <item>application/x-zip-compressed</item>
        <item>application/x-7z-compressed</item>
        <item>application/vnd.android.package-archive</item>
        <item>video/x-msvideo</item>
        <item>audio/mpeg</item>
        <item>video/mp4</item>
        <item>flv-application/octet-stream</item>
    </array>

    <!-- Broadcast -->
    <string name="broadcast_logout">broadcast_logout</string>
    <string name="broadcast_login">broadcast_login</string>
    <string name="broadcast_download">broadcast_download</string>
</resources>
