<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submit"
        android:background="@drawable/button_background"
        android:textColor="@color/text_white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/suggestion"
        android:hint="@string/suggestion"
        android:maxLength="3000"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/contact" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_password"
        android:id="@+id/submit_password"
        android:layout_below="@+id/suggestion"
        android:layout_alignRight="@+id/suggestion"
        android:layout_alignEnd="@+id/suggestion" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_password_tips"
        android:id="@+id/submit_password_tips"
        android:layout_above="@+id/submit" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contact"
        android:hint="@string/contact"
        android:singleLine="true"
        android:layout_above="@+id/submit_password_tips"
        android:layout_alignLeft="@+id/submit_password_tips"
        android:layout_alignStart="@+id/submit_password_tips"
        android:layout_toLeftOf="@+id/submit_password"
        android:layout_toStartOf="@+id/submit_password" />

</RelativeLayout>