<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_main_panel"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:gravity="center"
            android:id="@+id/welcome"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:textSize="17sp" />

        <Button
            android:background="@drawable/button_background"
            android:id="@+id/button_cjcx"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/cjcx"
            android:textSize="17sp"
            android:textColor="@color/text_white" />

        <Button
            android:background="@drawable/button_background"
            android:id="@+id/button_grkb"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/grkb"
            android:textSize="17sp"
            android:textColor="@color/text_white" />

        <Button
            android:background="@drawable/button_background"
            android:id="@+id/button_cxbm"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/cxbm"
            android:textSize="17sp"
            android:textColor="@color/text_white" />

        <Button
            android:background="@drawable/button_background"
            android:id="@+id/button_jxjh"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/jxjh"
            android:textSize="17sp"
            android:textColor="@color/text_white" />

        <Button
            android:background="@drawable/button_background"
            android:id="@+id/button_jxpj"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:visibility="gone"
            android:text="@string/jxpj"
            android:textSize="17sp"
            android:textColor="@color/text_white" />
    </LinearLayout>
</ScrollView>
