<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <View
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:background="@color/blue_main" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/blue_main"
        android:theme="@style/Toolbar" />

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- As the main content view, the view below consumes the entire
             space available using match_parent in both dimensions. -->
        <FrameLayout android:id="@+id/container" android:layout_width="match_parent"
            android:layout_height="match_parent" android:orientation="vertical" />

        <!-- android:layout_gravity="start" tells DrawerLayout to treat
             this as a sliding drawer on the left side for left-to-right
             languages and on the right side for right-to-left languages.
             If you're not building against API 17 or higher, use
             android:layout_gravity="left" instead. -->
        <!-- The drawer is given a fixed width in dp and extends the full height of
             the container. -->
        <LinearLayout
            android:id="@+id/navigation_drawer"
            android:layout_width="@dimen/navigation_drawer_width"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/window_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:background="@color/blue_main"
                android:orientation="vertical"
                android:clickable="true">

                <com.doge.dyjw.view.CircleImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/default_user"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/user_welcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/text_white"
                    android:gravity="center"
                    android:text="@string/user_welcome"/>

                <LinearLayout
                    android:id="@+id/user_panel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/login"
                        android:layout_width="wrap_content"
                        android:layout_height="26.0dip"
                        android:background="@drawable/corner_button"
                        android:textSize="16sp"
                        android:text="@string/login"
                        android:textColor="@color/text_white"/>

                    <Button
                        android:id="@+id/logout"
                        android:layout_width="wrap_content"
                        android:layout_height="26.0dip"
                        android:background="@drawable/corner_button"
                        android:visibility="gone"
                        android:textSize="16sp"
                        android:text="@string/logout"
                        android:textColor="@color/text_white"/>

                </LinearLayout>

            </LinearLayout>

            <ListView
                android:id="@+id/drawer_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null"
                android:choiceMode="singleChoice" />

        </LinearLayout>

    </android.support.v4.widget.DrawerLayout>

</LinearLayout>